# VehicleCounter_V2

./: CMakeLists.txt  README.md  dbtables.txt  main.cpp
tracking_logs/: 00000000160000000.txt
